--- a/NUnit.MSBuild/NUnit.MSBuild.nuspec
+++ b/NUnit.MSBuild/NUnit.MSBuild.nuspec
@@ -13,6 +13,7 @@ Copyright (c) Ace Olszowka 2020. All rights reserved.
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <license type="expression">MIT</license>
     <projectUrl>https://github.com/aolszowka/NUnit.MSBuild</projectUrl>
+    <repository type="git" url="https://github.com/aolszowka/NUnit.MSBuild.git" branch="master" />
     <description>$description$</description>
     <copyright>$copyright$</copyright>
     <tags>MSBuild NUnit3 Unit Tests</tags>
